# jigless-planner

./: .dev-setup.yml  .gitignore  .gitlab-ci.yml  .rosinstall  CMakeLists.txt  README.md  package.xml
.dev-setup/docker/: Dockerfile.base  Dockerfile.ci  Dockerfile.devcontainer  Dockerfile.run  build-image.sh  entrypoint.sh  push-image.sh
.devcontainer/: devcontainer.json
behavior_trees_xml/: command.xml  move_workpiece.xml  moverobot.xml  setcommandable.xml  setstatus.xml  transit.xml  validate.xml  weld.xml
config/: bringup_params.yaml  bt_params.yaml  params.yaml  workpiece_config.yaml
include/jigless-planner/: BottomControllerNode.hpp  ExecuteBottom.hpp  TopControllerNode.hpp
include/jigless-planner/behavior_tree_nodes/: MoveRobot.hpp  MoveWorkpiece.hpp  Transit.hpp  Validate.hpp  Weld.hpp
include/jigless-planner/behavior_tree_nodes/bottom_nodes/: Transit.hpp  Validate.hpp  Weld.hpp
include/jigless-planner/behavior_tree_nodes/top_nodes/: Command.hpp  MoveRobot.hpp  SetCommandable.hpp  SetStatus.hpp
launch/: commands  controllers.launch.py  dummies.launch.py  test1_adaptability.launch.py  test1_complexity.launch.py  test2_adaptability.launch.py  test2_robustness.launch.py  transit_example_launch.py  weldcell_example_launch.py
pddl/: combined_domain.pddl  combined_domain_no_workpiece.pddl  combined_domain_popf.pddl  joint_dependencies.csv  top_domain.pddl  top_welding_problem.pddl  top_welding_problem.plan  transit_domain.pddl  transit_problem.pddl  weld_domain.pddl  weldcell_problem.pddl  weldcell_problem_ideal.plan  weldcell_problem_no_workpiece.pddl  weldcell_problem_popf.pddl  weldcell_problem_popf.plan  weldcell_problem_popf_3.plan
pddl/test1/: top_welding_problem_1.pddl  top_welding_problem_10.pddl  top_welding_problem_11.pddl  top_welding_problem_13.pddl  top_welding_problem_15.pddl  top_welding_problem_16.pddl  top_welding_problem_17.pddl  top_welding_problem_19.pddl  top_welding_problem_2.pddl  top_welding_problem_3.pddl  top_welding_problem_4.pddl  top_welding_problem_5.pddl  top_welding_problem_6.pddl  top_welding_problem_7.pddl  top_welding_problem_8.pddl  top_welding_problem_9.pddl  weldcell_problem_no_workpiece 1.pddl  weldcell_problem_no_workpiece 3.pddl  weldcell_problem_no_workpiece 4.pddl  weldcell_problem_no_workpiece 5.pddl  weldcell_problem_no_workpiece 6.pddl  weldcell_problem_no_workpiece 7.pddl  weldcell_problem_no_workpiece_1.pddl  weldcell_problem_no_workpiece_10.pddl  weldcell_problem_no_workpiece_11.pddl  weldcell_problem_no_workpiece_12.pddl  weldcell_problem_no_workpiece_19.pddl  weldcell_problem_no_workpiece_2.pddl  weldcell_problem_no_workpiece_20.pddl  weldcell_problem_no_workpiece_5.pddl  weldcell_problem_no_workpiece_7.pddl  weldcell_problem_no_workpiece_8.pddl  weldcell_problem_no_workpiece_9.pddl
pddl/test1_adaptability/: weldcell_problem_no_workpiece.pddl
pddl/test1_complexity/: top_welding_problem_1.pddl  top_welding_problem_12.pddl  top_welding_problem_14.pddl  top_welding_problem_18.pddl  top_welding_problem_2.pddl  top_welding_problem_20.pddl  top_welding_problem_21.pddl  top_welding_problem_22.pddl  top_welding_problem_23.pddl  top_welding_problem_24.pddl  top_welding_problem_25.pddl  top_welding_problem_26.pddl  top_welding_problem_3.pddl  top_welding_problem_4.pddl  top_welding_problem_7.pddl  weldcell_problem_no_workpiece_1.pddl  weldcell_problem_no_workpiece_10.pddl  weldcell_problem_no_workpiece_11.pddl  weldcell_problem_no_workpiece_12.pddl  weldcell_problem_no_workpiece_13.pddl  weldcell_problem_no_workpiece_14.pddl  weldcell_problem_no_workpiece_15.pddl  weldcell_problem_no_workpiece_16.pddl  weldcell_problem_no_workpiece_17.pddl  weldcell_problem_no_workpiece_18.pddl  weldcell_problem_no_workpiece_19.pddl  weldcell_problem_no_workpiece_2.pddl  weldcell_problem_no_workpiece_20.pddl  weldcell_problem_no_workpiece_21.pddl  weldcell_problem_no_workpiece_22.pddl  weldcell_problem_no_workpiece_23.pddl  weldcell_problem_no_workpiece_24.pddl  weldcell_problem_no_workpiece_25.pddl  weldcell_problem_no_workpiece_26.pddl  weldcell_problem_no_workpiece_3.pddl  weldcell_problem_no_workpiece_4.pddl  weldcell_problem_no_workpiece_5.pddl  weldcell_problem_no_workpiece_6.pddl  weldcell_problem_no_workpiece_7.pddl  weldcell_problem_no_workpiece_8.pddl  (+1 more)
pddl/test2/: top_welding_problem.pddl
pddl/test2_adaptability/: top_welding_problem.pddl  weldcell_problem_no_workpiece.pddl
pddl/test2_robustness/: top_welding_problem.pddl  weldcell_problem_no_workpiece.pddl
scripts/: add_problem_client.py  generate_bottom_problem.py  generate_bt_params.py  generate_top_problem.py  plots.py  test1_client.py  test2_client_node.py  topological_sort_counter.py  transit_dummy_server.py
src/: BottomControllerNode.cpp  ExecuteBottom.cpp  TopControllerNode.cpp  bottom_controller_node.cpp  move_robot_action_node.cpp  move_workpiece_action_node.cpp  transit_action_node.cpp  validate_action_node.cpp  weld_action_node.cpp
src/behavior_tree_nodes/: MoveRobot.cpp  MoveWorkpiece.cpp  Transit.cpp  Validate.cpp  Weld.cpp
src/behavior_tree_nodes/bottom_nodes/: Transit.cpp  Validate.cpp  Weld.cpp
src/behavior_tree_nodes/top_nodes/: Command.cpp  MoveRobot.cpp  SetCommandable.cpp  SetStatus.cpp
src/dummies/: TransitDummyNode.cpp  ValidateDummyNode.cpp  WeldDummyNode.cpp
