<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jigless-planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eshan.savla@ipa.fraunhofer.de">mdh-es</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>yaml_cpp_vendor</depend>

  <depend>lifecycle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>test_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>jigless_planner_interfaces</depend>
  <depend>transit_interfaces</depend>
  <depend>weld_interfaces</depend>

  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>plansys2_bt_actions</depend>

  <depend>ament_index_cpp</depend>
  <depend>python3-networkx</depend>

  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>
  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
